GNOME Bugzilla – Bug 685420
Critical warnings when GtkPrintJob is released too early
Last modified: 2013-04-14 10:22:30 UTC
Created attachment 225699 [details] [review] Patch If the GtkPrintJob is freed too early when the surface has been created but the job hasn't been sent to the printer, it's possible that the file print backend tries to write to the io chaneel when it is already closed. This produces runtime critical warnings: GLib-CRITICAL **: g_io_channel_write_chars: assertion `channel->is_writeable' failed
This is related to bug #685419, since when this happens we end up in an inifinite loop.
Review of attachment 225699 [details] [review]: Hi Carlos, thank you for the report and the patch. I'll just ask you for placing link to this bug to the commit message. After that, feel free to commit it to gtk-3-8 and master. Marek
Comment on attachment 225699 [details] [review] Patch Pushed to both branches